# hey

./: AGENTS.md  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  ci.yml  release.yml
hey/: __init__.py  __main__.py  cli.py  context.py  settings.py
src/hey/: __init__.py  __main__.py  version.py
src/hey/application/: defaults.py  dto.py
src/hey/application/usecases/: chat.py  project.py
src/hey/bootstrap/: __init__.py  constants.py  container.py  factories.py  llm.py
src/hey/cli/: app.py
src/hey/cli/commands/: chat.py  history.py  show_chat_history.py
src/hey/cli/display/: chat.py  console.py
src/hey/core/agent/: __init__.py  protocols.py  runtime.py
src/hey/core/markdown/: __init__.py  parser.py  reducer.py
src/hey/core/mcp/: __init__.py  client.py
src/hey/core/pattern/: __init__.py  json.py
src/hey/core/schema/: __init__.py  json.py  python.py
src/hey/core/workflow/: __init__.py  controls.py  events.py  executor.py  graph.py  handler.py  nested.py  response.py  source.py  spec.py
src/hey/domain/entities/: agent.py  chat.py  config.py  llm.py  project.py  sandbox.py  tool.py  workflow.py
src/hey/domain/exceptions/: sandbox.py  tool.py
src/hey/domain/repositories/: chat.py  project.py  tool.py
src/hey/domain/services/: agent.py  agentsmd.py  auth.py  chat.py  config.py  file.py  llm.py  paths.py  project.py  sandbox.py  tool.py  workflow.py
src/hey/infrastructure/: paths.py
src/hey/infrastructure/chat/: __init__.py
src/hey/infrastructure/llm/: __init__.py  _openai_chat.py  codex.py  copilot.py  litellm.py  opencode.py
src/hey/infrastructure/project/: __init__.py  temporary.py
src/hey/infrastructure/sandbox/: __init__.py  macos.py  manager.py  noop.py  protocol.py
src/hey/infrastructure/tool/: __init__.py  builtin.py  path_guard.py
src/hey/interface/cli/: app.py
src/hey/usecases/: chat.py  project.py
tests/: test_hey.py
tests/unit/: conftest.py
tests/unit/application/usecases/: test_chat_compaction.py
tests/unit/bootstrap/: test_factories.py
tests/unit/cli/display/: test_utils.py
tests/unit/core/agent/: test_runtime.py
tests/unit/core/markdown/: test_markdown.py  test_parser.py
tests/unit/core/pattern/: test_json_pattern.py
tests/unit/core/schema/: test_json_schema.py  test_python_schema.py
tests/unit/core/workflow/: test_event_source.py  test_executor.py  test_graph.py  test_nested.py
tests/unit/domain/entities/: test_config.py
tests/unit/domain/services/: test_agentsmd.py  test_llm_services.py  test_project_services.py  test_tool_services.py
tests/unit/infrastructure/: test_paths.py
(+57 files in other folders)
