[project]
name = "hey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "altescy", email = "me@altescy.jp" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.pyright]
pythonVersion = "3.12"

[tool.ruff]
line-length = 120
