[project]
name = "hey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "altescy", email = "me@altescy.jp" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "colt>=0.19.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "rich>=14.3.4",
]

[project.scripts]
hey = "hey.__main__:run"

[project.optional-dependencies]
litellm = [
    "litellm>=1.83.4",
]
copilot = [
    "httpx>=0.28.0",
]
codex = [
    "httpx>=0.28.0",
]
web = [
    "httpx>=0.28.0",
    "markitdown>=0.1.0",
    "ddgs>=9.0.0",
]
bedrock = [
    "boto3",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]

[tool.pyright]
pythonVersion = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

